--- a/wiki/OpenBadge_Es.wiki
+++ b/wiki/OpenBadge_Es.wiki
@@ -23,7 +23,7 @@ allegiance, membership, authority, achievement, etc. (Source: [http://dictionary
 
 == ¿Qué es un Badge o Insignia? ==
 
-;badje o insignia :
+;badge o insignia :
 :# f. Señal, distintivo, o divisa honorífica.
 :# f. Emblema distintivo de una institución, asociación, o marca comercial, que se usa prendido en la ropa como muestra de vinculación o simpatía. Lucía en la solapa una insignia del club
 :# f. Bandera, estandarte, imagen o medalla de un grupo civil, militar o religioso.
@@ -35,7 +35,7 @@ Definiciones extraidas de la [http://lema.rae.es/drae/?val=insignia Real Académ
 <!-- A badge is a symbol or indicator of an accomplishment, skill, quality or interest. From the Boy and Girl Scouts, to PADI diving instruction, to the more recently popular geo-location game, [https://foursquare.com/ Foursquare], badges have been successfully used to set goals, motivate behaviors, represent achievements and communicate success in many contexts. A “digital badge” is an online record of achievements, tracking the recipient’s communities of interaction that issued the badge and the work completed to get it. Digital badges can support connected learning environments by motivating learning and signaling achievement both within particular communities as well as across communities and institutions. (Source: [https://wiki.mozilla.org/images/5/59/OpenBadges-Working-Paper_012312.pdf Erin Knight White Paper])-->
 
 
-Un badge o insignia es un símbolo o indicador de un logro, habilidad, saber cualidad o interes. Desde ls chicos y chicas de los scouts, las esculas de buceo PADI o los más recientes y populares juegos de geolocalización, [https://foursquare.com/ Foursquare], las insignias se han utilizado con éxito para establecer objetivos, motivar comportamientos, representan logros y comunicar el éxito en muchos contextos. Una "insignia digital" es una registro online de logros, con un seguimiento de la comunidad de interacción que emitió esa insignia y de la tarea que se completó para obtenerla. Las insignias digitales o Digital badges pueden ser un apoyo a ambientes de parendizaje on line motivando el aprendizaje y marcando los logros obtenidos tanto en interior de comunidades de aprendizaje como a través de distintas comunidades e instituciones.
+Un badge o insignia es un símbolo o indicador de un logro, habilidad, saber cualidad o interés. Desde los chicos y chicas de los scouts, las escuelas de buceo PADI o los más recientes y populares juegos de geolocalización, [https://foursquare.com/ Foursquare], las insignias se han utilizado con éxito para establecer objetivos, motivar comportamientos, representar logros y comunicar éxitos en muchos contextos. Una "insignia digital" o digital badge es un registro online de logros, con un seguimiento de la comunidad de interacción que emitió esa insignia y de la tarea que se completó para obtenerla. Las insignias digitales o digital badges pueden servir de apoyo a ambientes de aprendizaje online motivando el estudio y señalando los logros obtenidos tanto en el interior de las comunidades de aprendizaje como entre distintas comunidades e instituciones.
 (fuente: [https://wiki.mozilla.org/images/5/59/OpenBadges-Working-Paper_012312.pdf Erin Knight White Paper])
 
 <!--== Digital Badges vs Open Badges ==
@@ -44,9 +44,9 @@ A digital badge is an online representation of a skill you’ve earned. Open Bad
 
 == Digital Badges vs Open Badges o Insignias Digitales vs Insignias abiertas==
 
-Por ahora y hasta que se resuelvan las discusiones en torno a la localización de algunos términos, hemos de utilizar los términos Digital Badges y Open Badges en el idioma original. 
+Por ahora y hasta que se resuelvan las discusiones en torno a la traducción/localización de algunos términos, se utilizarán en este documento los términos Digital Badges y Open Badges en el idioma original. 
 
-Un badge digital es una representación online de una habilidad que has obtenido. Open Badges lleva ese concepto paso más allá, y le premite verificar sus habilidades, saberes, intereses y logros a trevés de organizaciones fiables y agrega esa información al archivo/imagen de la insignia, incrustando el metadato para su acceso o revisiones posteriores. Como el sistema está basado en estándares abiertos, los receptores de los badges pueden combinar multiples badges de difrentes emisores de manera que reflejen la histria completa de sus logros o saberes - de forma online como offline. Las insignias pueden ser mostradas en la web donde quienes las reciban deseen, y compartirlas para empleos, educación o aprendizajes continuos
+Un badge digital es una representación online de una habilidad que se ha obtenido. Open Badges lleva ese concepto un paso más allá, y le permite verificar sus habilidades, saberes, intereses y logros a través de organizaciones fiables y agrega esa información al archivo/imagen de la insignia, incrustando los metadatos para su acceder él o para futuras revisiones. Como el sistema está basado en estándares abiertos, los receptores de las insignias o badges pueden combinar multiples badges de difrentes emisores, de manera que se refleje la historia completa de los logros o saberes - obtenidos de forma online como offline. Estas insignias pueden ser exhibidas en la web, o donde quienes las reciban deseen, compartirlas para empleos, estudios o acreditar el aprendizaje continuo.
 
 <!--'''Open Badges are:'''-->
 ''' Los Insignias Abiertas o Open Badges son: '''
@@ -56,13 +56,13 @@ Un badge digital es una representación online de una habilidad que has obtenido
 *'''Stackable:''' Whether they’re issued by one organization or many, badges can build upon each other and be stacked to tell the full story of your skills and achievements.
 *'''Evidence-based:''' Open Badges are information-rich. Each badge has important metadata which is hard-coded into the badge image file itself that links back to the issuer, criteria and verifying evidence.-->
 
-*''' Libres y abiertos:''' Mozilla Open Badges no es propietario. Es software libre con estándares técnicos abieros de manera que culquier organización pueda crear, otorgar y verificar insignias digitales.
-*'''Transferibles:''' Reuna insignias/badges de multiples fuentes tanto online como offline, en una única "mochila". Luego muestre su habilidades, saberes y logros en perfiles de redes sociales, sitios laborales, páginas y más.
-*'''Acumulables:''' Ya sea que estén emitidos por una organización o muchas, las insignias/badges pueden construirse una sobre otra y ser apiladas para contar el recorrido completa de sus logros y saberes.
-*'''Basadas en evidencia:''' Las Insignias Abiertas o Open Badges son objetos ricos en información. Cada insignia contiene importantes metadatos que están dentro del código de la imagen de la insignia o badge y estos datos se enlazan al emisor, los criterios de emisión y la verificación del mismo.
+*''' Libres y abiertas:''' Mozilla Open Badges no es código propietario. Es software libre con estándares técnicos abiertos de forma que cualquier organización pueda crear, otorgar y verificar insignias digitales.
+*'''Transferibles:''' Reúna insignias/badges de múltiples fuentes tanto online como offline, en una única "mochila". Luego muestre su habilidades, saberes y logros en perfiles de redes sociales, sitios laborales, páginas y más.
+*'''Acumulables:''' Ya sea que estén emitidas por una organización o muchas, las insignias/badges pueden crearse una sobre otra y apilarse para contar el recorrido completo de logros y saberes.
+*'''Basadas en evidencia:''' Las Insignias Abiertas o Open Badges son objetos ricos en información. Cada insignia contiene importantes metadatos que están dentro del código de la imagen de la insignia o badge y estos datos enlazan al emisor, los criterios de emisión y la verificación de la misma.
 
 <!--'''Open Badges make it easy to:'''-->
-''' Las Insignias Abiertas son fáciles para:'''
+''' Las Insignias Abiertas hacen fácil:'''
 
 <!--*Get recognition for the things you learn;
 *Give recognition for the things you teach;
@@ -70,7 +70,7 @@ Un badge digital es una representación online de una habilidad que has obtenido
 *Display your verified badges across the web.-->
 
 *Obtener reconocimiento de lo que aprende;
-*Otorgar reconocimento de lo que enseña;
+*Otorgar reconocimiento de lo que enseña;
 *Verificar saberes, habilidades; y
 *Mostrar sus insignias verificadas en toda la web.
 
@@ -79,7 +79,7 @@ Un badge digital es una representación online de una habilidad que has obtenido
 == ¿Qué es el proyecto Mozilla Open Badges? ==
 
 <!--Learning today happens everywhere, not just in the classroom. But it's often difficult to get recognition for skills and achievements that happen outside of school. '''Mozilla's Open Badges project''' is working to solve that problem, making it easy for anyone to issue, earn and display badges across the web through a shared technical infrastructure. '''The result:''' helping people of all ages gain and display 21st century skills and unlock new career and educational opportunities.-->
-Hoy, el aprendizaje, sucede en todos lados, no sólo en los salones de clase. Pero generalmente es difícil obtener reconocimiento por los sabere, habilidades y logros que se obtienen fuera de las instituciones académicas. ''' El proyecto Open Badges de Mozilla''' trabaja para resolver ese problema, haciendo sencillo para cualquiera otorgar, ganar y mostrar insignias que reconozcan esos saberes en toda la web, a través de una infraestructura técnica compartida. '''El resultado:''' ayudar a gente de todas las edades a ganar y mostrar saberes del siglo XXI y abrir nuevas carreras y oportunidades educativas.
+Hoy, el aprendizaje, sucede en todos lados, no sólo en los salones de clase. Pero generalmente es difícil obtener reconocimiento por los saberes, habilidades y logros que se obtienen fuera de las instituciones académicas. ''' El proyecto Open Badges de Mozilla''' trabaja para resolver ese problema, haciendo sencillo para cualquiera otorgar, ganar y mostrar insignias que reconozcan esos saberes en toda la web, a través de una infraestructura técnica compartida. '''El resultado:''' ayudar a gente de todas las edades a ganar y mostrar saberes del siglo XXI y abrir nuevas carreras y oportunidades educativas.
 <!--Want to know more about Open Badges? [https://wiki.mozilla.org/Badges/About Read about what badges are and how they work] and check out our [https://wiki.mozilla.org/Badges/FAQs Frequently Asked Questions] page to find some answers, or shoot us an email at [mailto:badges@mozillafoundation.org badges@mozillafoundation.org]-->
 
 ¿Quiéren saber más sobre Open Badges?  [https://wiki.mozilla.org/Badges/About Enterate de lo que las insignias son y cómo funcionan] y chequeá nuestra página de  [https://wiki.mozilla.org/Badges/FAQs Preguntas Frecuentes], o envianos un email a [mailto:badges@mozillafoundation.org badges@mozillafoundation.org]
@@ -95,15 +95,15 @@ BadgeKit de Mozilla es un nuevo set de herramientas abiertas y fundamentales par
 *Includes remixable templates and milestone badges allowing for easy customization.
 *Provides modular and open options (standards) for the community of  badge makers to use and build upon within their existing sites or systems.-->
 '''BadgeKit:'''
-*Da soporte a etapas claves en el proceso de creación, diseño evaluación y emisión de insignias.
-*Incluyes plantillas remixables e insignias de logros/saberes prediseñadas para adaptarlas facilmente.
-*Provee opciones abiertas y modulares (estándares) para que la comunidad de creadores de insignias  use o utilice en sus propios sitios o sistemas.
+*Da soporte a etapas claves en el proceso de creación, diseño, evaluación y emisión de insignias.
+*Incluyes plantillas remixables e insignias de logros/saberes prediseñados para que sean adaptadas fácilmente.
+*Provee opciones abiertas y modulares (estándares) para que la comunidad de creadores de insignias use o utilice en sus propios sitios o sistemas.
 
 <!--BadgeKit is now available in private beta for select partner organizations that meet specific technical requirements. Alternatively, anyone can download the code from GitHub and implement it on their own servers.-->
 BadgeKit está disponible en beta privada para organizaciones y socios seleccionados que cumplen con los requisitos técnicos. De todas maneras, cualquiera puede bajar el código desde GitHub e implementarlo en sus propios servidores.
 
 <!--We will continue to add additional BadgeKit features throughout the coming year, including tools to support collecting, sharing and discovering badges.-->
-Seguiremos incluyendo características adicionales a Badgekit durante este año, incluyendo herramientas que para juntar, compartir y encontrar insignias o badges.
+Seguiremos incluyendo características adicionales a Badgekit durante este año, agregando herramientas que para juntar, compartir y encontrar insignias o badges.
 
 <!--You can apply for access to the private beta hosted version of BadgeKit at http://www.badgekit.org, or grab the code for each tool from Github today at https://github.com/mozilla/openbadges-badgekit -->
 Puede solicitar acceso a la beta privada de BadgeKit en http://www.badgekit.org, o tomar el código de cada herramienta desde Github en https://github.com/mozilla/openbadges-badgekit
@@ -131,7 +131,8 @@ Para información general sobre BadgeKit, o para sumarse a nuestra comunidad ech
 <!--;Go! Get some Badges!
 :*Take the [http://openbadges.org/earn/ Badges 101 Quiz] and earn your first badge!-->
 ;¡Ya! ¡Obtenga algunos badges!
-:*¡Haga el [http://openbadges.org/earn/  test inicial] y gane sus primeras insignias o badges!
+:*¡Haga el [http://openbadges.org/earn/  ejercicio inicial] y gane sus primeras insignias o badges!
+
 <!--Read more about the [https://github.com/mozilla/openbadges#mozilla-open-badges Technology] behind Open Badges.-->
 Leer más sobre la [https://github.com/mozilla/openbadges#mozilla-open-badges Tecnología] detrás de Open Badges.
 <br>
@@ -151,17 +152,17 @@ Leer más sobre la [https://github.com/mozilla/openbadges#mozilla-open-badges Te
 *[[Media:Open_Badges_Presentation_-_General.pdf‎| '''Open Badges presentation materials''']] -- Want to give an Open Badges presentation? To get you started, here's a PDF. Please note that all of these documents are [https://creativecommons.org/licenses/by-sa/2.0/ CC by SA].
 *[https://docs.google.com/document/d/1aTAP04N9dAuSGv71tWOUA1iqYxWWTA4dlQIyP-7WT0E/edit '''Common badges terms and vocabulary'''] -- Help us to build a common lexicon of digital badge terms.-->
 *[https://groups.google.com/d/forum/openbadges '''Grupo de aprendizaje de Open Badges'''] y [https://groups.google.com/forum/#!forum/openbadges-dev '''grupo de desarrollo'''] -- Suscribirse a estos grupos para participar en las conversaciones en curso acerca de insignias
-*[https://openbadges.etherpad.mozilla.org/openbadges-community-2 '''Llamadas comunitarias de Open Badges'''] -- Unase a nustras llamadas globales semanales todos los miércoles a las 9am PT / 12pm ET / 5pm GMT. Durante estas llamadas de una hora compartimos nuestros progresos y fomentamos que comparta su trabajo en Open Badges, respondemos preguntas y comentarios. ¡Son divertidas esta invitado a participar!
-*[https://openbadges.etherpad.mozilla.org/research-calls '''Llamadas de investigación y Diseño'''] -- Si está interesado en la investigación sobre Open Badges y en el diseño del sistema de Open Badges, unase a esta llamda los miércoles, una hora antes de la llamada comunitaria a las 8am PT / 11am ET / 4pm GMT.
+*[https://openbadges.etherpad.mozilla.org/openbadges-community-2 '''Llamadas comunitarias de Open Badges'''] -- Únase a nuestras llamadas globales semanales todos los miércoles a las 9am PT / 12pm ET / 5pm GMT. Durante estas llamadas de una hora compartimos nuestros progresos y fomentamos que comparta su trabajo en Open Badges, respondemos preguntas y comentarios. ¡Son divertidas estan invitados a participar!
+*[https://openbadges.etherpad.mozilla.org/research-calls '''Llamadas de investigación y Diseño'''] -- Si está interesado en la investigación sobre Open Badges y en el diseño del sistema de Open Badges, únase a esta llamada los miércoles, una hora antes de la llamada comunitaria. A las 8am PT / 11am ET / 4pm GMT.
 *[http://openbadges.tumblr.com// '''Blog de Open Badges'''] -- Siga las noticias y actualizaciones desde nuestro blog de Open Badges.
 *[http://twitter.com/#!/openbadges '''Twitter'''] -- Siga @OpenBadges y use el hashtag [https://twitter.com/search?q=%23OpenBadges&src=typd #OpenBadges] para unirse a la conversación en Twitter.
 *[https://www.facebook.com/MozillaOpenBadges '''Facebook'''] -- Búscanos en Facebook para compartir en sus perfiles noticias y actualizaciones.
 *[https://wiki.mozilla.org/IRC '''IRC'''] -- Encuentrenos en IRC en irc.mozilla.org, #badges
-*[[Media:Open_Badges_Presentation_-_General.pdf‎| '''Materiales para presentationes de Open Badges''']] -- ¿Quiere dar una presentación sobre Open Badges? Para que empiece, acá hay un PDF. Tenga en cuenta que todos estos documentos son [https://creativecommons.org/licenses/by-sa/2.0/ CC by SA].
-*[https://docs.google.com/document/d/1aTAP04N9dAuSGv71tWOUA1iqYxWWTA4dlQIyP-7WT0E/edit '''Términos y vocabulario común'''] -- Ayudenos a construir un vocabulario y léxico común de terminos sobre insignias digitales.
+*[[Media:Open_Badges_Presentation_-_General.pdf‎| '''Materiales para presentaciones de Open Badges''']] -- ¿Quiere dar una presentación sobre Open Badges? Para empezar tiene este PDF. Tenga en cuenta que todos estos documentos son [https://creativecommons.org/licenses/by-sa/2.0/ CC by SA].
+*[https://docs.google.com/document/d/1aTAP04N9dAuSGv71tWOUA1iqYxWWTA4dlQIyP-7WT0E/edit '''Términos y vocabulario común'''] -- Ayúdenos a construir un vocabulario y léxico común de terminos sobre insignias digitales.
 
 <!--== Who is using Open Badges? ==-->
-== ¿Quién está usando Open Badges?
+== ¿Quién está usando Open Badges? ==
 <!--*[http://openmatt.wordpress.com/2011/03/17/badges-in-the-real-world/ '''User stories'''] -- Hypothetical examples of how badges can help solve problems in everyday scenarios.<br> 
 *[http://www.2mbetterfutures.org/ '''2 Million Better Futures'''] -- This project from [http://www.cgiamerica.org/ CGI America] aims to help 1 million workers and 1 million students succeed using Open Badges by 2016.
 *[http://chicagosummeroflearning.org/about '''Chicago Summer of Learning'''] -- The first citywide badging initiative, which was so successful that [http://www.enewspf.com/school-news/45425-mayor-emanuel-announces-nearly-100-000-badges-awarded-through-chicago-summer-of-learning.html '''Mayor Emmanuel committed to continuing the program next year.''']
@@ -171,12 +172,12 @@ Leer más sobre la [https://github.com/mozilla/openbadges#mozilla-open-badges Te
 *[https://wiki.mozilla.org/Badges/Issuers '''Add your organization!'''] -- If you're issuing, designing or exploring open badges with your communities, add your organization to our list of issuers.-->
 
 *[http://openmatt.wordpress.com/2011/03/17/badges-in-the-real-world/ '''Historias de usuarios'''] -- Ejemplos hipotéticos sobre como los badges pueden resolver problemas en escenarios de la vida real.<br> 
-*[http://www.2mbetterfutures.org/ '''2 Million Better Futures'''] -- Este proyecto de [http://www.cgiamerica.org/ CGI America] tiene como objetivo ayudar a 1 millón de trabajadores y 1 millón de estudiantes a tener éxito usando Insignias Abiertas o Open badges para el 2016.
-*[http://chicagosummeroflearning.org/about '''Chicago Summer of Learning'''] -- La primera iniciativa de credencialización en toda la ciudad, que tuvo tanto éxito que [http://www.enewspf.com/school-news/45425-mayor-emanuel-announces-nearly-100-000-badges-awarded-through-chicago-summer-of-learning.html '''el Alcade Emmanuel se comprometió a continuar el programa por un año más.''']
+*[http://www.2mbetterfutures.org/ '''2 Million Better Futures'''] -- Este proyecto de [http://www.cgiamerica.org/ CGI America] tiene como objetivo ayudar a 1 millón de trabajadores y 1 millón de estudiantes a mejorar usando Insignias Abiertas o Open badges para el 2016.
+*[http://chicagosummeroflearning.org/about '''Chicago Summer of Learning'''] -- La primera iniciativa de credencialización en toda la ciudad, que tuvo tanto éxito que [http://www.enewspf.com/school-news/45425-mayor-emanuel-announces-nearly-100-000-badges-awarded-through-chicago-summer-of-learning.html '''el Alcalde Emmanuel se comprometió a continuar el programa por un año más.''']
 *[http://www.openbadges.org/participating-issuers/ '''Los emisores participantes'''] -- Una lista actualizada de emisores y diseñadores de insignias o badges.
 *[http://bit.ly/platform-chart '''Grilla general de plataformas emisoras de Insignias o Badges'''] -- Una lista de plataformas para emitir insignias abiertas o open badges generada y actualizada continuamente por la comunidad.
 *[http://blog.makewav.es/2013/08/05/open-badges-for-schools-what-are-the-options/ '''Plataforma emisora de insignias o badges para escuelas'''] -- Plataformas de emisión Insignia para las escuelas.
-*[https://wiki.mozilla.org/Badges/Issuers '''¡Agregue su organización!'''] -- Si es un emisor, diseñador o está explorando las  insignias abiertas u open badges con su comunidad, agregué su organización a nuestra lista de emisores.
+*[https://wiki.mozilla.org/Badges/Issuers '''¡Agregue su organización!'''] -- Si es un emisor, diseñador o está explorando las  insignias abiertas u open badges con su comunidad, agregue a su organización a nuestra lista de emisores.
 
 <!--== Further Reading  ==-->
 == Lectura Adicional ==
@@ -187,9 +188,9 @@ Leer más sobre la [https://github.com/mozilla/openbadges#mozilla-open-badges Te
 *[https://wiki.mozilla.org/Badges/roadmap '''Open Badges roadmap'''] -- We're continually updating the roadmap with new features.
 *[http://dmlcompetition.net '''Digital Media and Learning Competition: Badges for LifeLong Learning'''] (administered by HASTAC and funded by MacArthur) -- click to learn more.-->
 
-*[https://wiki.mozilla.org/File:OpenBadges-Working-Paper_012312.pdf '''White Paper'''] -- Una mirada en profundidad la forma en que las insignias pueden reinventar el aprendizaje del siglo 21.<br> 
-*[http://bit.ly/badgevalidation '''Open Badges Validation Paper'''] -- Una exploración de cómo construir un sistema de acreditación abierto y distribuido para las insignias y las organizaciones que las emiten<br>
-*[http://www.scoop.it/t/badges-for-lifelong-learning/?tag=Sheryl+Grant '''Press coverage'''] -- Una colección de notas y artículos relacionados del miembro de la comunidad [http://www.hastac.org/users/slgrant Sheryl Grant] (¡En breve una nueva página con la cobertura de la prensa!)
+*[https://wiki.mozilla.org/File:OpenBadges-Working-Paper_012312.pdf '''White Paper'''] -- Una mirada en profundidad a la forma en que las insignias pueden reinventar el aprendizaje del siglo 21.<br> 
+*[http://bit.ly/badgevalidation '''Open Badges Validation Paper'''] -- Una exploración sobre cómo construir un sistema de acreditación abierto y distribuido de insignias y sobre las organizaciones que las emiten<br>
+*[http://www.scoop.it/t/badges-for-lifelong-learning/?tag=Sheryl+Grant '''Press coverage'''] -- Una colección de notas y artículos relacionados hechos por miembro de la comunidad [http://www.hastac.org/users/slgrant Sheryl Grant] (¡En breve una nueva página con la cobertura de la prensa!)
 *[https://wiki.mozilla.org/Badges/roadmap '''Open Badges roadmap'''] -- Estamos continuamente actualizando la hoja de ruta con las nuevas características..
 *[http://dmlcompetition.net '''Digital Media and Learning Competition: Badges for LifeLong Learning'''] (administered by HASTAC and funded by MacArthur) -- click para saber más.
 
@@ -206,7 +207,7 @@ Por favor contactarse a [mailto:press@mozilla.com press@mozilla.com].
 *[https://www.facebook.com/mozilla '''Like Mozilla on Facebook'''] and [http://twitter.com/mozilla '''Follow Mozilla on Twitter''']
 *[https://donate.mozilla.org/Sign-Up '''Get updates from Mozilla'''] -- Be the first to know what we're doing and how you can get involved.-->
 
-*[http://join.mozilla.org '''Unirse a  Mozilla'''] -- ¡Puede obtener una elegante remera uniendose!
+*[http://join.mozilla.org '''Unirse a  Mozilla'''] -- ¡Puede obtener una elegante remera uniéndose!
 *[http://www.mozilla.org/about/mission.html '''Misión de Mozilla'''] -- Leer más sobre nuestra misión para promover la apertura, innovación y oportunidades en la Web.
 *[https://www.facebook.com/mozilla '''Busque a Mozilla en Facebook'''] y [http://twitter.com/mozilla '''Siga a Mozilla en Twitter''']
 *[https://donate.mozilla.org/Sign-Up '''Obtenga actualizaciones de Mozilla'''] -- Sea el primero en saber que estamos hacienodo y como involucrarse en los proyectos.
